# BionicSX2

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  cop2v.txt
.github/workflows/: build-ipa.yml
ULTRA LOG/: BUILD_DEBUG_REPORT.txt  Phase2_Build_Errors_Iteration_6.txt  Phase2_Readiness_Report.txt  Session_2026-05-09_Phase2_Build_Errors.txt  Source_File_Cross_Check_Report.txt  Verified_Source_List_78_Files.txt
ULTRA_LOG/: explanation.txt  phase6_undefined_symbols.txt
cmake/: ios.toolchain.cmake
docs/: MASTER_BRIEF.md
ios/: Info.plist  main.mm  main_placeholder.mm
ios/entitlements/: BionicSX2.entitlements
ios/platform/: AudioStream_iOS.mm  BionicLogger.hpp  BionicLogger.mm  CocoaTools.mm  CrashHandler.cpp  CrashHandler.hpp  EmulatorBridge.h  EmulatorBridge.mm  ExitWrapper.c  Filesystem_iOS.mm  HostSys_iOS.cpp  Host_iOS.mm  PCSX2FatalExit.h  PCSX2LogRedirect.h  PCSX2Stubs.mm  Watchdog.cpp  Watchdog.hpp  iOSVMManager.h  iOSVMManager.mm
ios/ui/: AppDelegate.h  AppDelegate.mm  GameLibraryViewController.h  GameLibraryViewController.mm  LogViewerController.mm  MetalViewController.h  MetalViewController.mm
pcsx2/common/: CMakeLists.txt  Image.cpp  WindowInfo.cpp
pcsx2/pcsx2/: CMakeLists.txt  Memory.cpp  Memory.h  R5900.cpp  SaveState.cpp  VMManager.cpp
pcsx2/pcsx2/CDVD/: CDVD.cpp  CDVDcommon.cpp  CDVDdiscReader.cpp  ChdFileReader.cpp  CsoFileReader.cpp
pcsx2/pcsx2/GS/: GS.cpp  GSUtil.cpp
pcsx2/pcsx2/GS/Renderers/HW/: GSRendererHW.cpp  GSTextureCache.cpp
pcsx2/pcsx2/Input/: InputManager.cpp
pcsx2/pcsx2/Recording/: InputRecording.cpp
pcsx2/pcsx2/SIO/Pad/: Pad.cpp
pcsx2/pcsx2/ps2/: BiosTools.cpp
